kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  annotations:
    kubernetes.io/change-cause: Upgrading to myapp 1.0.5
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: "dinbtechitregistry.azurecr.io/myappdeve"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          lifecycle:
            # This "sleep" preStop hook delays the
            # Pod shutdown until after our Ingress
            # controller removes the matching Endpoint
            preStop:
              exec:
                command:
                  - /bin/sleep
                  - "20"
                    # This period should be tuned to your
                    # ingress/mesh update latency
          readinessProbe:
            initialDelaySeconds: 1
            periodSeconds: 3
            failureThreshold: 3
            successThreshold: 1
            httpGet:
             path: /
             port: 80
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 1
            successThreshold: 1
            httpGet:
              path: /
              port: 80
      terminationGracePeriodSeconds: 30
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
  progressDeadlineSeconds: 600
