kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: myapp-service
              servicePort: 80
